fix(tag): ensure tag name text does not wrap for better readability

--- a/packages/web-qwik/src/components/blog/blog-article.module.scss
+++ b/packages/web-qwik/src/components/blog/blog-article.module.scss
@@ -14,7 +14,8 @@
 .tag-container {
   margin-bottom: 1rem;
   display: flex;
-  gap: 0.5rem;
+  flex-wrap: wrap;
+  gap: 0 0.5rem;
   user-select: none;
 }
 
